Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30728

setMouseTracking for a QVideoWidget seems to be ignored

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.11.0
    • 5.0.2
    • Multimedia
    • None
    • Linux Mint 14 x64, Qt-Creator 2.7.0, Qt 5.0.2_x64

    Description

      This is likely due to how GStreamer is directing video content to the window, and my vary depending on the path that is taken to the window surface.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            prest1ge prest1ge c0ding
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes