Allow to receive mouse move events in QVideoWidget

No move events are being received for QVideoWidget even with enabled Qt::WA_MouseTracking.
All these events are ignored because video widget from QVideoWidgetControl
always has disabled Qt::WA_MouseTracking.

Proxied this mouse tracking property to video widget.

Task-number: QTBUG-30728
Change-Id: Ic196042596906ce8b5674b62ea66f5e035ba3cfe
Reviewed-by: Christian Stromme <christian.stromme@qt.io>